--- a/aprendiendo_html/public_html/index.html
+++ b/aprendiendo_html/public_html/index.html
@@ -4,6 +4,7 @@
         <title>Pagina de Diego</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="style.css" rel ="stylesheet">
     </head>
     <body>
         <header>
