avanzando en CSS

--- a/aprendiendo_html/public_html/index.html
+++ b/aprendiendo_html/public_html/index.html
@@ -8,10 +8,10 @@
     </head>
     <body>
         <header>
-            <h1>Diego José Avila Estrada</h1>
+            <h1 class="titulo">Diego José Avila Estrada</h1>
         </header>
         <section>
-            <h2>Desarrollador Web Junior </h2>
+            <h2 class="titulo">Desarrollador Web <spanc class="junior">Junior</span> </h2>
             <img src="imagenes_iconos/programacion.jpg">
         </section>
         <p>Quetzaltenango, Guatemala</p>
