agregamos libreria normalize y mejoramos el nav

--- a/aprendiendo_html/public_html/index.html
+++ b/aprendiendo_html/public_html/index.html
@@ -4,14 +4,23 @@
         <title>Pagina de Diego</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="style.css" rel ="stylesheet">
+        <link rel="stylesheet" href="css/normalize.css">
+        <link href="css/style.css" rel ="stylesheet">
     </head>
     <body>
         <header>
             <h1 class="titulo">Diego José Avila Estrada</h1>
         </header>
+        <div class="navP-fondo">
+            <nav class="nav-principal contenedor">
+                <a href="#">Inicio</a>
+                <a href="#">Sobre mí</a>
+                <a href="#">Contacto</a>
+            </nav>
+        </div>
+
         <section>
-            <h2 class="titulo">Desarrollador Web <spanc class="junior">Junior</span> </h2>
+            <h2 class="titulo">Desarrollador Web <span class="junior">Junior</span> </h2>
             <img src="imagenes_iconos/programacion.jpg">
         </section>
         <p>Quetzaltenango, Guatemala</p>
