--- a/aprendiendo_html/public_html/nosotros.html
+++ b/aprendiendo_html/public_html/nosotros.html
@@ -4,7 +4,7 @@
         <title>Nosotros</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="style.css" rel ="stylesheet">
+        <link href="css/style.css" rel ="stylesheet">
     </head>
     <body>
         <h1>Sobre mí</h1>
