--- a/aprendiendo_html/public_html/index.html
+++ b/aprendiendo_html/public_html/index.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <header>
-            <h1 class="titulo">Diego José Avila Estrada</h1>
+            <h1 class="tituloPrincipal">Diego José Avila Estrada</h1>
         </header>
         <div class="navP-fondo">
             <nav class="nav-principal contenedor">
@@ -19,21 +19,25 @@
             </nav>
         </div>
 
-        <section>
-            <h2 class="titulo">Desarrollador Web <span class="junior">Junior</span> </h2>
-            <img src="imagenes_iconos/programacion.jpg">
+        <section class="subTitulo">
+            <div class="contenido-subTitulo">
+                <h2 class="titulo">Desarrollador Web <span class="junior">Junior</span> </h2>
+                <p>
+                    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-map-2" width="52" height="52" viewBox="0 0 24 24" stroke-width="2" stroke="#ff2825" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                    <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                    <line x1="18" y1="6" x2="18" y2="6.01" />
+                    <path d="M18 13l-3.5 -5a4 4 0 1 1 7 0l-3.5 5" />
+                    <polyline points="10.5 4.75 9 4 3 7 3 20 9 17 15 20 21 17 21 15" />
+                    <line x1="9" y1="4" x2="9" y2="17" />
+                    <line x1="15" y1="15" x2="15" y2="20" />
+                    </svg>
+                </p>
+                <p>Quetzaltenango, Guatemala</p>
+            </div>
+
         </section>
-        <p>Quetzaltenango, Guatemala</p>
-        <p>
-            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-map-2" width="52" height="52" viewBox="0 0 24 24" stroke-width="2" stroke="#ff2825" fill="none" stroke-linecap="round" stroke-linejoin="round">
-            <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-            <line x1="18" y1="6" x2="18" y2="6.01" />
-            <path d="M18 13l-3.5 -5a4 4 0 1 1 7 0l-3.5 5" />
-            <polyline points="10.5 4.75 9 4 3 7 3 20 9 17 15 20 21 17 21 15" />
-            <line x1="9" y1="4" x2="9" y2="17" />
-            <line x1="15" y1="15" x2="15" y2="20" />
-            </svg>
-        </p>
+
+
         <main>
             <section>
                 <h3>Diseño Web</h3>
