--- a/aprendiendo_html/public_html/index.html
+++ b/aprendiendo_html/public_html/index.html
@@ -21,7 +21,7 @@
 
         <section class="subTitulo">
             <div class="contenido-subTitulo">
-                <h2 class="titulo">Desarrollador Web <span class="junior">Junior</span> </h2>
+                <h2>Desarrollador Web <span class="junior">Junior</span> </h2>
                 <p>
                     <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-map-2" width="52" height="52" viewBox="0 0 24 24" stroke-width="2" stroke="#ff2825" fill="none" stroke-linecap="round" stroke-linejoin="round">
                     <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
@@ -34,7 +34,6 @@
                 </p>
                 <p>Quetzaltenango, Guatemala</p>
             </div>
-
         </section>
 
 
